--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@next/font": "13.1.6",
+    "axios": "^1.5.1",
     "bootstrap": "^5.2.3",
     "next": "13.1.6",
     "react": "18.2.0",
@@ -21,5 +22,6 @@
     "sass": "^1.58.1",
     "slick-carousel": "^1.8.1",
     "wowjs": "^1.1.3"
-  }
+  },
+  "proxy" : "https://drawproject-production.up.railway.app"
 }
