--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@next/font": "13.1.6",
+    "antd": "^5.9.4",
     "axios": "^1.5.1",
     "bootstrap": "^5.2.3",
     "next": "13.1.6",
@@ -23,5 +24,5 @@
     "slick-carousel": "^1.8.1",
     "wowjs": "^1.1.3"
   },
-  "proxy" : "https://drawproject-production.up.railway.app"
+  "proxy": "https://drawproject-production.up.railway.app"
 }
