--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "react-slick": "^0.29.0",
     "sass": "^1.58.1",
     "slick-carousel": "^1.8.1",
-    "wowjs": "^1.1.3"
+    "wowjs": "^1.1.3",
+    "yarn": "^1.22.19"
   },
   "proxy": "https://drawproject-production.up.railway.app"
 }
