--- a/package.json
+++ b/package.json
@@ -9,12 +9,20 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@iconscout/react-unicons": "^2.0.2",
+    "@mui/material": "^5.14.13",
     "@next/font": "13.1.6",
     "antd": "^5.9.4",
+    "apexcharts": "^3.43.0",
     "axios": "^1.5.1",
     "bootstrap": "^5.2.3",
+    "framer-motion": "^10.16.4",
     "next": "13.1.6",
     "react": "18.2.0",
+    "react-apexcharts": "^1.4.1",
+    "react-circular-progressbar": "^2.1.0",
     "react-countup": "^6.4.1",
     "react-dom": "18.2.0",
     "react-intersection-observer": "^9.4.2",
