--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ant-design/icons": "^5.2.6",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@hookform/resolvers": "^3.3.2",
     "@iconscout/react-unicons": "^2.0.2",
     "@mui/material": "^5.14.13",
     "@next/font": "13.1.6",
@@ -25,6 +27,7 @@
     "react-circular-progressbar": "^2.1.0",
     "react-countup": "^6.4.1",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.47.0",
     "react-intersection-observer": "^9.4.2",
     "react-modal-video": "^2.0.0",
     "react-router-dom": "^6.16.0",
@@ -32,7 +35,8 @@
     "sass": "^1.58.1",
     "slick-carousel": "^1.8.1",
     "wowjs": "^1.1.3",
-    "yarn": "^1.22.19"
+    "yarn": "^1.22.19",
+    "yup": "^1.3.2"
   },
   "proxy": "https://drawproject-production.up.railway.app"
 }
