--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-circular-progressbar": "^2.1.0",
     "react-countup": "^6.4.1",
     "react-dom": "18.2.0",
+    "react-image": "^4.1.0",
     "react-intersection-observer": "^9.4.2",
     "react-modal-video": "^2.0.0",
     "react-router-dom": "^6.16.0",
