--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "next": "13.1.6",
     "react": "18.2.0",
     "react-apexcharts": "^1.4.1",
+    "react-bootstrap": "^2.9.0",
     "react-circular-progressbar": "^2.1.0",
     "react-countup": "^6.4.1",
     "react-dom": "18.2.0",
