--- a/package.json
+++ b/package.json
@@ -19,8 +19,11 @@
     "antd": "^5.9.4",
     "apexcharts": "^3.43.0",
     "axios": "^1.5.1",
+    "big-number": "^2.0.0",
+    "bignumber.js": "^9.1.2",
     "bootstrap": "^5.2.3",
     "framer-motion": "^10.16.4",
+    "lodash": "^4.17.21",
     "next": "13.1.6",
     "react": "18.2.0",
     "react-apexcharts": "^1.4.1",
@@ -34,6 +37,7 @@
     "react-slick": "^0.29.0",
     "sass": "^1.58.1",
     "slick-carousel": "^1.8.1",
+    "uuid": "^9.0.1",
     "wowjs": "^1.1.3",
     "yarn": "^1.22.19",
     "yup": "^1.3.2"
