--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/styled": "^11.11.0",
     "@iconscout/react-unicons": "^2.0.2",
     "@mui/material": "^5.14.13",
+    "@mui/x-data-grid": "^6.16.2",
     "@next/font": "13.1.6",
     "antd": "^5.9.4",
     "apexcharts": "^3.43.0",
