--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "axios": "^1.5.1",
     "bootstrap": "^5.2.3",
     "framer-motion": "^10.16.4",
-    "next": "13.1.6",
+    "next": "^13.5.6",
     "react": "18.2.0",
     "react-apexcharts": "^1.4.1",
     "react-bootstrap": "^2.9.0",
@@ -33,10 +33,17 @@
     "react-router-dom": "^6.16.0",
     "react-slick": "^0.29.0",
     "react-toastify": "^9.1.3",
+    "recharts": "^2.9.0",
+    "runtime": "^0.9.10",
     "sass": "^1.58.1",
     "slick-carousel": "^1.8.1",
     "wowjs": "^1.1.3",
     "yarn": "^1.22.19"
   },
-  "proxy": "https://drawproject-production.up.railway.app"
+  "proxy": "https://drawproject-production.up.railway.app",
+  "devDependencies": {
+    "@babel/core": "^7.23.2",
+    "@babel/preset-env": "^7.23.2",
+    "babel-loader": "^9.1.3"
+  }
 }
