--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "axios": "^1.5.1",
     "bootstrap": "^5.2.3",
     "framer-motion": "^10.16.4",
-    "next": "^13.5.6",
+    "lodash.merge": "^4.6.2",
+    "next": "^13.1.6",
     "react": "18.2.0",
     "react-apexcharts": "^1.4.1",
     "react-bootstrap": "^2.9.0",
@@ -30,6 +31,7 @@
     "react-image": "^4.1.0",
     "react-intersection-observer": "^9.4.2",
     "react-modal-video": "^2.0.0",
+    "react-player": "^2.13.0",
     "react-router-dom": "^6.16.0",
     "react-slick": "^0.29.0",
     "react-toastify": "^9.1.3",
