--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-image": "^4.1.0",
     "react-intersection-observer": "^9.4.2",
     "react-modal-video": "^2.0.0",
+    "react-pdf": "^7.5.1",
     "react-player": "^2.13.0",
     "react-router-dom": "^6.16.0",
     "react-slick": "^0.29.0",
