--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mui/material": "^5.14.13",
     "@mui/x-data-grid": "^6.16.2",
     "@next/font": "13.1.6",
+    "@simplepdf/react-embed-pdf": "^1.5.0",
     "antd": "^5.9.4",
     "apexcharts": "^3.43.0",
     "axios": "^1.5.1",
@@ -31,11 +32,11 @@
     "react-image": "^4.1.0",
     "react-intersection-observer": "^9.4.2",
     "react-modal-video": "^2.0.0",
-    "react-pdf": "^7.5.1",
     "react-player": "^2.13.0",
     "react-router-dom": "^6.16.0",
     "react-slick": "^0.29.0",
     "react-toastify": "^9.1.3",
+    "reactjs-popup": "^2.0.6",
     "recharts": "^2.9.0",
     "runtime": "^0.9.10",
     "sass": "^1.58.1",
