--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "axios": "^1.5.1",
     "bootstrap": "^5.2.3",
     "framer-motion": "^10.16.4",
+    "js-cookie": "^3.0.5",
     "lodash.merge": "^4.6.2",
     "next": "^13.1.6",
     "react": "18.2.0",
