--- a/package.json
+++ b/package.json
@@ -55,6 +55,8 @@
     "@babel/preset-env": "^7.23.2",
     "autoprefixer": "^10.4.16",
     "babel-loader": "^9.1.3",
+    "eslint": "8.53.0",
+    "eslint-config-next": "14.0.1",
     "postcss": "^8.4.31",
     "postcss-import": "^15.1.0",
     "postcss-nesting": "^12.0.1",
