--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-intersection-observer": "^9.4.2",
     "react-modal-video": "^2.0.0",
     "react-player": "^2.13.0",
+    "react-quill": "^2.0.0",
     "react-router-dom": "^6.16.0",
     "react-slick": "^0.29.0",
     "react-toastify": "^9.1.3",
